--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta charset="UTF-8">
     <title>Correction TP web</title>
 
+    <link rel="stylesheet" href="styles.css">
+
   </head>
 
   <body>
