--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta charset="UTF-8">
     <title>Correction TP web</title>
 
-    <link rel="stylesheet" href="styles.css">
+    <!-- <link rel="stylesheet" href="styles.css"> -->
+    <link rel="stylesheet" href="testStyle.css">
 
   </head>
 
@@ -18,11 +19,12 @@
     </header>
 
     <div id="menu">
+      <h2>Sommaire</h2>
       <ul>
         <li><a href="#partie1">Partie 1</a></li>
         <li><a href="#partie2">Partie 2</a></li>
         <li><a href="#partie3">Partie 3</a></li>
-        <li><a href="form.html">Formulaire</a></li>
+        <li><a href="form.html" isRedirection>Formulaire</a></li>
       </ul>
     </div>
 
@@ -78,8 +80,6 @@
         ligula.
       </p>
     </section>
-
-    <a href="form.html" title="formulaire">Accéder au formulaire</a>
 
     <footer>
       <p>Madec Germerie Guizouarn</p>
