--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta charset="UTF-8">
     <title>Correction TP web</title>
 
-    <!-- <link rel="stylesheet" href="styles.css"> -->
-    <link rel="stylesheet" href="testStyle.css">
+    <link rel="stylesheet" href="styles.css">
 
   </head>
 
